fixed button collapse when spinner showing.

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,9 +1,16 @@
-$fancyButtonPadding: 10px !default;
-
-.fancy-button-padding {
-  padding: $fancyButtonPadding;
+.fancy-button {
+  position: relative;
 }
 
-.fancy-button-relative {
-  position: relative;
+.fancy-button__disabled {
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.fancy-button__label-transparent {
+  color: transparent;
 }
